[package]
name = "martta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"]}
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
regex = "1"
thiserror = "1.0.32"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.19.6"
